fix spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -179,7 +179,7 @@ body {
 
                 h1 {
                     font-family: 'Abril Fatface';
-                    letter-spacing: 5px;
+                    letter-spacing: 8px;
                     text-align: center;
                     font-size: 60px;
                     color: white;
@@ -191,7 +191,7 @@ body {
                     font-family: "Quicksand";
                     text-align: center;
                     font-weight: 100;
-                    letter-spacing: 10px;
+                    letter-spacing: 13px;
                     font-size: 35px;
                     color: white;
                     /* text-shadow: 2px 2px $marrone; */
